-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.5.0, 0.6.0, 0.7.0, 0.7.1, 0.8.0, 0.9.0, 0.9.1, 0.10.0, 1.0.0, 1.0.1, 1.1.0, 1.2.0, 1.3.0, 1.3.1, 1.4.0, 1.5.0, 1.6.0, 1.7.0, 1.8.0, 1.7.1, 1.9.0, 1.10.0
-
Fix Version/s: 1.11.0
-
Labels:
-
Code Review:
In some cases when WAL operations are slow, a follower replica may grant yes votes right after processing recent Raft transactions even if currently established leader replica is alive and well. Vote requests might come from so called disruptive replicas in the cluster. The disruptive replicas might ask for votes of higher Raft term than the current term with established and well being leader.
In some cases that might lead to multiple successive election rounds even if there were no actual reason to re-elect leader replicas.