[consensus] KUDU-2947 fix voting in case of slow WAL

Before this patch, a follower replica may grant 'yes' vote right after
processing recent Raft transactions even if currently established leader
is alive and well in cases when persisting a Raft transaction in WAL
takes longer than the leader election timeout.

That might lead to multiple successive election rounds even if there
were no actual reason to re-elect leader replicas.

This patch also adds a test to verify the behavior of follower tablet
replicas under the conditions described above.  The test was failing
before the patch and now it's now passing.

This is a follow-up to 4870ef20b9a0c729c1d7f16c016c7d91b193e46f.

Change-Id: I7c061b498e727a1a11e94e03c55530eeebfdf8dd
Reviewed-on: http://gerrit.cloudera.org:8080/14260
Tested-by: Kudu Jenkins
Reviewed-by: Adar Dembo <adar@cloudera.com>
Reviewed-by: Andrew Wong <awong@cloudera.com>